# iit-dagana-ros-pkg

./: .gitignore  README.md
dagana_gazebo/: CMakeLists.txt  package.xml  readme.md
dagana_gazebo/include/dagana_gazebo/: DaganaPlugin.h
dagana_gazebo/launch/: dagana.launch
dagana_gazebo/src/: DaganaPlugin.cpp
dagana_urdf/: CMakeLists.txt  package.xml
dagana_urdf/launch/: dagana_slider.launch
dagana_urdf/meshes/: dagana_claw_A.stl  dagana_claw_A_mujoco.stl  dagana_claw_A_simple.stl  dagana_claw_B.stl  dagana_claw_B_no_base.stl  dagana_claw_B_no_base_simplified.stl  dagana_claw_B_simple.stl  dagana_claw_B_simple_chag.stl  dagana_fixed_A.stl  dagana_fixed_A_simple.stl  dagana_fixed_A_simple_chag.stl  dagana_fixed_A_simplified.stl  dagana_fixed_B.stl  dagana_fixed_BC.stl  dagana_fixed_BC_simple.stl  dagana_fixed_B_simple.stl  dagana_fixed_C.stl  dagana_fixed_C_simple.stl  dagana_fixed_C_simplified.stl  dg0001-ch_v2.stl  dg0001-simplified.stl  dg0001-simplified_v2_bottom.stl  dg0001-simplified_v2_palm.stl  dg0001_ch.stl  dg0002.stl  dg0002_ch.stl  mesh_dagana-base_simple.stl  mesh_dagana-link.stl  mesh_dagana-link_ch.stl  mesh_dagana_base_ch.stl  mesh_dagana_link_simple.stl  mesh_formwork-thumb.stl  mesh_formwork-thumb_ch.stl  mesh_formwork_base.stl  mesh_formwork_base_ch.stl  mesh_tube-base_ch.stl  mesh_tube-thumb_simple.stl  mesh_tube_base.stl  mesh_tube_base_simple.stl  mesh_tube_thumb_ch.stl
dagana_urdf/rviz/: dagana.rviz
dagana_urdf/urdf/: dagana.urdf.xacro  dagana_macro.urdf.xacro
dagana_urdf/urdf/config/: dagana_config.urdf.xacro
